--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -173,7 +173,7 @@
     width: max-content; 
     margin: 0; 
 }
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 768px) and (max-width: 1260px) {
   .zion-card {
     display: grid;
     grid-template-columns: 1fr 1fr;
